--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,13 +1,101 @@
-body {
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+@import 'https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap';
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  text-decoration: none;
+  color: inherit;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
 }
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+html {
+  font-family: "Montserrat", sans-serif;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+}
+.header__nav {
+  display: flex;
+  flex: 1;
+  justify-content: flex-end;
+}
+.header__nav-list {
+  display: flex;
+  gap: 2rem;
+}
+
+.button {
+  border: 1px solid #222;
+  border-radius: 0.5rem;
+  background-color: #0077c2;
+  color: #FFFFFF;
+  padding: 0.4rem;
+  transition: background-color 0.2s ease, color 0.2s ease;
+}
+.button--link {
+  border: none;
+  background-color: unset;
+  color: #222;
+}
+.button--link:hover {
+  color: #777;
+}
+.button--warning {
+  background-color: #fcba03;
+  color: #222;
+}
+.button--warning:hover {
+  background-color: #ffc72b;
+}
+
+/*# sourceMappingURL=index.css.map */
