--- a/front/src/styles/components/thread.scss
+++ b/front/src/styles/components/thread.scss
@@ -1,29 +1,28 @@
-.topic {
+.thread {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: .4rem .8rem;
+    border-bottom: 1px solid $secondary;
+    
+    h2 {
+        font-weight: 700;
+    }
+
     &__container {
         display: flex;
         flex-direction: column;
-        gap: 2rem;
-        margin: 2rem 4vw;
+        gap: .4rem;
+        border: 1px solid $secondary;
+        border-radius: 0 0 8px 8px;
+        padding: .4rem 0;
     }
 
-    &__title {
-        background-color: $secondary;
-        border-radius: 8px 8px 0 0;
-        color: $white;
-        padding: .4rem;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-    
     &__creation {
         display: flex;
         flex-direction: column;
         gap: .4rem;
         padding: .4rem .8rem;
-        border: 1px solid $secondary;
-        border-radius: 8px;
-        width: fit-content;
 
         .input_container {
             display: flex;
@@ -41,10 +40,24 @@
             }
         }
     }
+    
+    &--as_page {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        margin: 2rem 4vw;
+        
+        h2 {
+            background-color: #2c3e50;
+            border-radius: 8px;
+            color: #f2f2f2;
+            padding: 0.4rem;
+        }
+    }
 }
 
 @media screen and (min-width: map-get($breakpoints, sm)) {
-    .topic {
+    .thread {
         &__creation {
             flex-direction: unset;
             align-items: center;
