--- a/front/src/styles/main.scss
+++ b/front/src/styles/main.scss
@@ -5,3 +5,6 @@
 @import 'components/header.scss';
 @import 'components/button.scss';
 @import 'components/topic.scss';
+@import 'components/thread.scss';
+@import 'components/message.scss';
+@import 'components/user.scss';
